Enable native access for unnamed modules in launcher
Add the `--enable-native-access=ALL-UNNAMED` flag to prevent warnings caused by Jansi related to native method access. This ensures compatibility with future Java versions where stricter enforcement might block such access.