@@ -42,6 +42,11 @@ public final class PolocloudProcess extends Thread {
                 .orElseThrow(() -> new LibNotFoundException(Parameters.BOOT_LIB));
 
         arguments.add(usedJava + "/bin/java");
+
+        // Enables native access for unnamed modules to avoid warnings caused by Jansi (used for terminal output).
+        // Without this flag, Java may block access to native methods like System::load in future versions.
+        arguments.add("--enable-native-access=ALL-UNNAMED");
+
         arguments.add("-javaagent:%s".formatted(bootLib.target()));
 
         arguments.add("-cp");
